# Rzdd

./: .gitignore  DESCRIPTION  NAMESPACE  configure  configure.ac
.Rproj.user/B8D5BE7C/: cpp-complilation-config
R/: RcppExports.R  Rzdd.R  dd_util.R  enum_part.R  frontier.R  partition.R  util.R
inst/include/: Rzdd.h  comb.hpp  component.hpp  frontier.hpp  graph.hpp  tdzdd_graph_util.hpp  util.hpp  zdd_node.hpp  zdd_tree.hpp
inst/include/enumpart/: ComponentRatioSpec.hpp  ComponentWeightSpec.hpp  GraphPartitionSpec.hpp
inst/include/tdzdd/dd/: DdBuilder.hpp
inst/include/tdzdd/util/: MessageHandler.hpp
inst/test/: test_adj.R  test_fukui.R  test_grid.R  test_grid_nodep.R  test_hoke.R
man/: Rzdd-package.Rd  partition_alg.Rd
src/: Makevars.in  RcppExports.cpp  dd_util.cpp  enumpart.cpp  frontier.cpp  graph_util.cpp  tdzdd_partition.cpp  test.cpp
